--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -26,22 +26,27 @@ jobs:
         php-version: '8.0'
     - uses: actions/checkout@v3
     - name: Copy .env.test.local
+      working-directory: ./app
       run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
+      working-directory: ./app
       with:
         path: vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
     - name: Install Dependencies
+      working-directory: ./app
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Create Database
+      working-directory: ./app
       run: |
         mkdir -p data
         touch data/database.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit
+      working-directory: ./app
       env:
         DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
       run: vendor/bin/phpunit
