--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -31,9 +31,8 @@ jobs:
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
-      working-directory: ./app
       with:
-        path: vendor
+        path: ./app/vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
@@ -46,7 +45,7 @@ jobs:
         mkdir -p data
         touch data/database.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit
-      working-directory: ./app
       env:
         DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
+      working-directory: ./app
       run: vendor/bin/phpunit
