--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -44,6 +44,10 @@ jobs:
       run: |
         mkdir -p data
         touch data/database.sqlite
+    - name: Run Migrations
+      working-directory: ./app
+      run: |
+        composer app.preparation.test
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
