--- a/app/.env.test
+++ b/app/.env.test
@@ -5,4 +5,5 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
-DATABASE_URL="mysql://root:foobar@db:3306/app_db?serverVersion=10.6.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://root:foobar@db:3306/app_db?serverVersion=10.6.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="sqlite:///%kernel.project_dir%/data/database.sqlite"
