--- a/app/config/packages/doctrine.yaml
+++ b/app/config/packages/doctrine.yaml
@@ -19,8 +19,12 @@ doctrine:
 when@test:
     doctrine:
         dbal:
-            # "TEST_TOKEN" is typically set by ParaTest
-            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+            connections:
+                default:
+                # "TEST_TOKEN" is typically set by ParaTest
+                # dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+                driver: 'pdo_sqlite'
+                url: '%env(resolve:DATABASE_URL)%'
 
 when@prod:
     doctrine:
