--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -47,6 +47,7 @@ jobs:
     - name: Run Migrations
       working-directory: ./app
       run: |
+        php artisan config:clear
         composer app.preparation.test
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
