--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -45,9 +45,10 @@ jobs:
         mkdir -p data
         touch data/database.sqlite
     - name: Run Migrations
+      env:
+        DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
       working-directory: ./app
       run: |
-        php bin/console cache:pool:clear
         composer app.preparation.test
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
