--- a/app/composer.json
+++ b/app/composer.json
@@ -72,7 +72,7 @@
             "@app.preparation"
         ],
         "db-preparation": [
-            "php bin/console doctrine:migrations:migrate -q --allow-no-migration --no-interaction",
+            "php bin/console doctrine:migrations:migrate -q --allow-no-migration --no-interaction"
         ],
         "app.preparation": [
             "@db-preparation",
