--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -54,7 +54,7 @@ jobs:
       env:
         DATABASE_URL: "sqlite:///%kernel.project_dir%/data/database.sqlite"
       working-directory: ./app
-      run: vendor/bin/phpunit
+      run: vendor/bin/phpunit -f --testdox --colors=always
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
