--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             - "20206:3306"
         volumes:
             - db_data:/var/lib/mysql
+            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
         command: [ "mysqld", "--max-allowed-packet=536870912", "--default-authentication-plugin=mysql_native_password" ]
         networks:
             - app-network
