--- a/app/.env.test
+++ b/app/.env.test
@@ -4,3 +4,4 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+DATABASE_URL="mysql://root:foobar@db:3306/app_db_test?serverVersion=10.6.2-MariaDB&charset=utf8mb4"
